<resources>
    <string name="app_name">The Guardian Reader</string>

    <!-- The Guardian API endpoints -->
    <string name="the_guardian_api_content_endpoint">https://content.guardianapis.com/search
    </string>

    <string name="empty_list_message">No news to show.</string>

    <!-- ** SETTINGS ** -->
    <string name="settings_title">News Settings</string>

    <!-- Strings for number of news to load per request -->
    <string name="settings_number_of_news_to_load_label">Number of News to Load</string>
    <string name="settings_number_of_news_to_load_key" translatable="false">news_to_load</string>
    <string name="settings_number_of_news_to_load_default" translatable="false">@string/settings_number_of_news_to_load_10_value</string>

    <!-- Label for news_to_load 10 option  -->
    <string name="settings_number_of_news_to_load_10_label">10</string>
    <string name="settings_number_of_news_to_load_10_value" translatable="false">10</string>

    <!-- Label for news_to_load 20 option -->
    <string name="settings_number_of_news_to_load_20_label">20</string>
    <string name="settings_number_of_news_to_load_20_value" translatable="false">20</string>

    <!-- Label for news_to_load 30 option -->
    <string name="settings_number_of_news_to_load_30_label">30</string>
    <string name="settings_number_of_news_to_load_30_value" translatable="false">30</string>

    <!-- Strings for number of news to load per request -->
    <string name="settings_order_by_label">Order by</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_relevance_value</string>

    <!-- Label for order_by_relevance -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <!-- Label for order_by_newest -->
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!-- Label for order_by_oldest -->
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value">oldest</string>

    <!-- ** MENU ** -->
    <string name="settings_menu_item">Settings</string>


</resources>
