<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:key="@string/settings_number_of_news_to_load_key"
        android:title="@string/settings_number_of_news_to_load_label"
        android:dialogTitle="@string/settings_number_of_news_to_load_label"
        android:defaultValue="@string/settings_number_of_news_to_load_default"
        android:entries="@array/settings_number_of_news_to_load_labels"
        android:entryValues="@array/settings_number_of_news_to_load_values"/>

    <ListPreference
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label"
        android:dialogTitle="@string/settings_order_by_label"
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values" />

</PreferenceScreen>